--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ after_success:
   - docker build -t olkabolkagoryashenko/multi-server ./server
   - docker build -t olkabolkagoryashenko/multi-worker ./worker
   - echo "@DOCKER_PASSWORD" | docker login -u "@DOCKER_ID" --password-stdin
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
   - docker push oborisenko/multi-client
   - docker push oborisenko/multi-worker
   - docker push oborisenko/multi-nginx
