--- a/.travis.yml
+++ b/.travis.yml
@@ -28,5 +28,7 @@ deploy:
   env: 'Multidocker-env'
   bucket_name: 'elasticbeanstalk-us-east-1-624360971490'
   bucket_path: 'docker-multi'
+  on:
+    branch: master
   access_key_id: $AWS_ACCESS_KEY
   secret_access_key: $AWS_SECRET_KEY
