--- a/.travis.yml
+++ b/.travis.yml
@@ -24,8 +24,8 @@ after_success:
 deploy:
   provider: elasticbeanstalk
   region: 'us-east-1'
-  app: 'multi-docker'
-  env: 'Multidocker-env'
+  app: 'multi-docker-1'
+  env: 'Multidocker1-env'
   bucket_name: 'elasticbeanstalk-us-east-1-624360971490'
   bucket_path: 'docker-multi'
   on:
